# Seattle_Home

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  SETUP_GOOGLE.md  package-lock.json
apps/web/: .gitignore  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ChatWidget.tsx  Filters.tsx  Navbar.tsx  OpenHouseCard.tsx  ProfileCards.tsx  TourModal.tsx
apps/web/src/lib/: api.ts
backend/: .env.example  .gitignore  ADMIN_WORKFLOW.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  lead.py  listing.py  search.py
backend/app/services/: __init__.py  area_knowledge.py  email_service.py  embedding_service.py  google_sheet_service.py  listing_search_service.py  llm_service.py  maps_service.py  normalization_service.py
backend/services/: __init__.py  sheets.py
docs/: DEPLOYMENT.md  LLM_CHAT.md  PRODUCT_UPGRADE.md  claude.md  futureImprovement.md  product_overview.md  resume.md
frontend/docs/: GCP_API_COST_ANALYSIS.md  backend.md  claude.md  codeUpdate.md  failure.md  future_features.md  pageStyle.md  profile.md  step4.md  view.md
frontend/src/app/: page.tsx
frontend/src/components/: OpenHouseCard.tsx  ProfileCards.tsx  PropertyMap.tsx  TourModal.tsx
frontend/src/lib/: api.ts
src/app/: layout.tsx  page.tsx
src/app/contact/: page.tsx
src/app/open-houses/: page.tsx
src/components/: Navbar.tsx  ProfileCards.tsx
src/lib/: api.ts
(+5 files in other folders)
